--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
     "@mui/icons-material": "^5.15.19",
     "@mui/material": "^5.15.19",
     "clsx": "^2.1.1",
+    "install": "^0.13.0",
     "next": "14.2.3",
+    "nodemailer": "^6.9.13",
     "react": "^17.0.0 || ^18.0.0",
     "react-dom": "^17.0.0 || ^18.0.0",
     "react-icons": "^5.2.1"
