--- a/package.json
+++ b/package.json
@@ -14,9 +14,10 @@
     "@fontsource/roboto": "^5.0.13",
     "@mui/icons-material": "^5.15.19",
     "@mui/material": "^5.15.19",
+    "@next/third-parties": "^14.2.4",
     "clsx": "^2.1.1",
     "install": "^0.13.0",
-    "next": "14.2.3",
+    "next": "^14.2.4",
     "nodemailer": "^6.9.13",
     "react": "^17.0.0 || ^18.0.0",
     "react-dom": "^17.0.0 || ^18.0.0",
